--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "prettier": "^1.17.1"
+  },
+  "dependencies": {
+    "dotenv": "^8.0.0",
+    "mongoose": "^5.5.10"
   }
 }
