--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "prettier": "^1.17.1"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "mongoose": "^5.5.10"
+    "express": "^4.17.0",
+    "mongoose": "^5.5.10",
+    "morgan": "^1.9.1"
   }
 }
