--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.10",
     "morgan": "^1.9.1"
   }
