--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "full stack e-commerce for your free use",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "nodemon": "^1.19.0",
     "prettier": "^1.17.1"
   },
   "dependencies": {
