--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.10",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport-local-mongoose": "^5.0.1"
   }
 }
