--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.5.10",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local-mongoose": "^5.0.1"
   }
 }
