--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   assets:
     - assets/facebook.png
     - assets/logo.png
+    - assets/logo1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
