--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_rating: ^0.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -77,7 +77,9 @@ flutter:
         - asset: assets/Montserrat-Regular.ttf
         - asset: assets/Montserrat-Bold.ttf
           weight: 700
-
+    - family: lovelo
+      fonts:
+        - asset: assets/lovelo.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
