--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_rating: ^0.0.2
+  url_launcher: ^3.0.3
+  shared_preferences: ^0.4.0
+  http: ^0.11.3+16
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
