--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   url_launcher: ^3.0.3
   shared_preferences: ^0.4.0
   http: ^0.11.3+16
+  toast: ^0.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
