--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -50,7 +50,6 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - assets/facebook.png
     - assets/logo.png
     - assets/logo1.png
 
@@ -88,6 +87,9 @@ flutter:
     - family: Quicksand
       fonts:
         - asset: assets/Quicksand-Regular.ttf
+    - family: MADE Coachella
+      fonts:
+        - asset: assets/MADE Coachella Regular PERSONAL USE.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
