--- a/admin/package.json
+++ b/admin/package.json
@@ -32,6 +32,7 @@
         "method-override": "^3.0.0",
         "mongoose": "^5.5.4",
         "mongoose-timestamp": "^0.6.0",
+        "morgan": "^1.9.1",
         "multer": "^1.4.1",
         "node-fetch": "^2.6.0",
         "validator": "^10.11.0"
