--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -19,11 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_rating: ^0.0.2
-  url_launcher: ^3.0.3
   shared_preferences: ^0.4.0
   http: ^0.11.3+16
   toast: ^0.1.3
+  intl: ^0.15.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
